local/gateway/service-types.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-types
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
#    - matches: [ { path: { type: Exact, value: /manual-endpointslices } } ]
#      backendRefs: [ { name: manual-endpointslices, port: 8080 } ]
#    - matches: [ { path: { type: Exact, value: /headless } } ]
#      backendRefs: [ { name: headless, port: 8080 } ]
    - matches: [ { path: { type: Exact, value: /headless-manual-endpointslices } } ]
      backendRefs: [ { name: headless-manual-endpointslices, port: 8080 } ]
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: manual-endpointslices
#  namespace: gateway-conformance-infra
#spec:
#  ports:
#    - name: first-port
#      protocol: TCP
#      port: 8080
#      targetPort: 3000
#---
#apiVersion: discovery.k8s.io/v1
#kind: EndpointSlice
#metadata:
#  name: manual-endpointslices-ip4
#  namespace: gateway-conformance-infra
#  labels:
#    kubernetes.io/service-name: manual-endpointslices
#addressType: IPv4
#ports:
#  - name: first-port
#    port: 3000
#    protocol: TCP
#endpoints:
#  - addresses:
#      - 10.244.0.58
#      - 10.244.0.223
#
#---
#apiVersion: discovery.k8s.io/v1
#kind: EndpointSlice
#metadata:
#  name: manual-endpointslices-ip6
#  namespace: gateway-conformance-infra
#  labels:
#    kubernetes.io/service-name: manual-endpointslices
#addressType: IPv6
#ports:
#  - name: first-port
#    port: 3000
#    protocol: TCP
#endpoints:
#  - addresses:
#      - 10.244.0.58
#      - 10.244.0.223
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: headless
#  namespace: gateway-conformance-infra
#spec:
#  clusterIP: None
#  selector:
#    app: infra-backend-v1
#  ports:
#    - name: first-port
#      protocol: TCP
#      port: 8080
#      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: headless-manual-endpointslices
  namespace: gateway-conformance-infra
spec:
  clusterIP: None
  ports:
    - name: first-port
      protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: headless-manual-endpointslices-ip4
  namespace: gateway-conformance-infra
  labels:
    kubernetes.io/service-name: headless-manual-endpointslices
addressType: IPv4
ports:
  - name: first-port
    port: 3000
    protocol: TCP
endpoints:
  - addresses:
      - 10.244.0.135
      - 10.244.0.117
---
#apiVersion: discovery.k8s.io/v1
#kind: EndpointSlice
#metadata:
#  name: headless-manual-endpointslices-ip6
#  namespace: gateway-conformance-infra
#  labels:
#    kubernetes.io/service-name: headless-manual-endpointslices
#addressType: IPv6
#ports:
#  - name: first-port
#    port: 3000
#    protocol: TCP
#endpoints:
#  - addresses:
#    - 10.244.0.58
#    - 10.244.0.223
